<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JoinIt</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_register">Registreren met email</string>
    <string name="btn_help">Help</string>
    <string name="btn_login">Aanmelden</string>
    <string name="title_activity_login">Login</string>
    <string name="button_bevestig_login">Log in</string>
    <string name="edit_email">Email</string>
    <string name="edit_wachtwoord">Wachtwoord</string>
    <string name="edit_wachtwoord_herhaal">Herhaal wachtwoord</string>
    <string name="button_bevestig">Registreer</string>
    <string name="button_exit">Annuleer</string>
    <string name="titel">titel</string>
    <string name="omschrijving">Omschrijving</string>
    <string name="add">Voeg activiteit toe</string>
    <string name="postcode">Postcode</string>
    <string name="plaats">Plaats</string>
    <string name="huisnr">Huisnummer</string>
    <string name="datum">Datum</string>
    <string name="Nieuwsoverzicht">Nieuwsoverzicht</string>
    <string name="title_activity_nieuwsoverzicht">Nieuwsoverzicht</string>
    <string name="tv_nieuwsoverzicht">Nieuwsoverzicht</string>
    <string name="title_activity_nieuwsoverzicht2">Nieuwsoverzicht2</string>
    <string name="title_activity_">Activity</string>
    <string name="title_activity_activity__view">Activity_View</string>

</resources>
