<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="${packageName}.${activityClass}"
    android:gravity="center|top"
    android:orientation="vertical" >
    
    <TextView 
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/tv_add"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_marginBottom="10sp"
     />
    <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray"
    android:layout_marginBottom="10sp"
    />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titel"
                android:id="@+id/tv_titel"
                android:gravity="center"
                android:textSize="25sp"
                />
            
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_titel"
                android:hint="@string/titel"
                android:gravity="center"
                android:layout_marginBottom="10sp"
                />
            
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/omschrijving"
                android:id="@+id/tv_omschrijving"
                android:gravity="center"
                android:textSize="25sp"
                />
            
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="120sp"
                android:id="@+id/et_omschrijving"
                android:hint="@string/omschrijving"
                android:gravity="center|top"
                android:layout_marginBottom="10sp"
                />
            
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/postcode"
                android:id="@+id/tv_postcode"
                android:gravity="center"
                android:textSize="25sp"
                />
            
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_postcode"
                android:hint="@string/postcode"
                android:gravity="center|top"
                android:layout_marginBottom="10sp"
                />
            
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/huisnr"
                android:id="@+id/tv_huisnr"
                android:gravity="center"
                android:textSize="25sp"
                />
            
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_huisnr"
                android:hint="@string/huisnr"
                android:gravity="center|top"
                android:layout_marginBottom="10sp"
                />
            
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plaats"
                android:id="@+id/tv_plaats"
                android:gravity="center"
                android:textSize="25sp"
                />
            
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_plaats"
                android:hint="@string/plaats"
                android:gravity="center|top"
                android:layout_marginBottom="10sp"
                />
            
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datum"
                android:id="@+id/tv_datum"
                android:gravity="center"
                android:textSize="25sp"
                />
            
            <EditText
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
                android:hint="@string/datum"
                android:id="@+id/et_datum"
        		android:ems="10"
        		android:inputType="date"
                android:gravity="center|top"
                android:layout_marginBottom="10sp" >
    		</EditText>
    		
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/btn_add"
                style="@style/btnStyleSandrift" 
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextView1"
                />
            
            </LinearLayout>
    </ScrollView>

</LinearLayout>
